# hydrogen

./: .gitignore  .gitmodules  AGENT_HANDOFF.md  AUDIT.md  AffectiveVoiceBridge.hs  BASH_IS_OBSOLETE.md  CLAUDE.md  LICENSE  OPENAPI_CODEGEN_IS_OBSOLETE.md  REACT_IS_OBSOLETE.md  README.md  SESSION_NOTES.md  SHADCN_IS_OBSOLETE.md  TODO.md  build_output.txt  flake.local.nix  flake.nix  lake-manifest.json  lakefile.lean  my_voice.py  package-lock.json  package.json  spago.yaml
.psci_modules/: cache-db.json
.psci_modules/$PSCI/: externs.cbor
.psci_modules/Affjax/: index.js
.psci_modules/Affjax.RequestBody/: index.js
.psci_modules/Affjax.RequestHeader/: index.js
.psci_modules/Affjax.ResponseFormat/: index.js
.psci_modules/Affjax.ResponseHeader/: index.js
.psci_modules/Affjax.StatusCode/: index.js
.psci_modules/Affjax.Web/: index.js
.psci_modules/Ansi.Codes/: index.js
.psci_modules/Ansi.Output/: index.js
.psci_modules/Control.Comonad.Env.Class/: index.js
.psci_modules/Control.Comonad.Traced.Class/: index.js
.psci_modules/Control.Comonad.Trans.Class/: index.js
.psci_modules/Control.Monad.Cont.Trans/: index.js
.psci_modules/Control.Monad.Except.Trans/: index.js
.psci_modules/Control.Monad.Identity.Trans/: index.js
.psci_modules/Control.Monad.List.Trans/: index.js
ROADMAP/: CANVAS_EDITOR.md  MOTION_GRAPHICS.md  SCHEMA.md  roadmap.md
docs/: 100-million-I2I.json  100-million-T2I.json  ARCHITECTURE.md  ATOM_AUDIT.md  AUDIT_2026-02-28.md  BINARY_FORMAT.md  COMPONENT_ARCHITECTURE.md  COUNCIL_REVIEW.md  Circular Gradients.blend  DASHBOARD_TODO.md  FAA_COUNCIL_DELIBERATION.md  FOUNDRY_ARCHITECTURE.md  GAME_PILLAR_SPEC.md  GEOMETRY_ROADMAP.md  Gradients Open.blend  IMPLEMENTATION_PLAN.md  INVARIANTS.md  LATTICE_COMPONENTS.md  LEAN_PROOF_ROADMAP.md  MASTER_INTEGRATION_CHECKLIST.md  ONLINE_SUBMODULAR_IMPLEMENTATION.md  PHASE_0_IMPLEMENTATION.md  PRODUCTION_READINESS.md  PROOFS.md  QwenImageEdit_Multi Angles + Light_restoration.json  REMEDIATION_TRACKER.md  RENDERING_ARCHITECTURE.md  RUNTIME_SPEC.md  SCHEMA.md  SCHEMA_AUDIT_2026-02-28.md  SCHEMA_GAPS.md  SCHEMA_PILLAR_ARCHITECTURE.md  SCRAPER_MVP_TODO.md  SECURITY_GAPS.md  SESSION_HANDOFF.md  SPATIAL_VOCABULARY.md  TEMPORAL_INTEGRITY_SPEC.md  TENSOR_RENDERING.md  TESTING_STRATEGY.md  THREEJS_PARITY_ROADMAP.md  (+19 more)
docs/libAtsSim-master/: .gitignore  CMakeLists.txt  README.md  TargetConfig.h.in  compile_shader_and_make_proj.py
docs/libAtsSim-master/documents/: example2_async_comminications.drawio  example2_async_convergence.py  example2_scheduling_result.py  example3_scheduling_result.py
docs/libAtsSim-master/examples/: example1_heft2002.cpp  example2_async_iter.cpp  example3.metal  example3_hybrid_cpu_gpu.cpp  test_1_waiting_events.cpp
docs/libAtsSim-master/src/: CMakeLists.txt
docs/libAtsSim-master/src/SharedDefine/: aabb.h  address_space.h  atomic.h  bits_utils.h  constant_value.h  float_n.h  float_n_n.h  geometry.h  gpu_algorism.h  large_matrix.h  make_arguments.h  morton.h  scalar.h  scene_params.cpp  scene_params.h  svd_3x3.h
docs/libAtsSim-master/src/Solver/: collision_data.h  fem_energy.h  xpbd_constraints.h
docs/libAtsSim-master/src/Utils/: clock.cpp  clock.h  command_list.cpp  command_list.h  cpu_parallel.cpp  cpu_parallel.h  mesh_reader.cpp  mesh_reader.h  metal_system.cpp  metal_system.h  shared_array.cpp  shared_array.h  struct_to_string.h  utils.h
docs/libAtsSim-master/src/heterogeneous/: fence.h  gpu_function.cpp  gpu_function.h  launcher.cpp  launcher.h
haskell/: cabal-core-only.project  cabal.project
haskell/effect-monad/: effect-monad.cabal
haskell/effect-monad/src/Control/: Effect.hs
haskell/effect-monad/src/Control/Effect/: Do.hs
haskell/foundry-core/: foundry-core.cabal
haskell/foundry-core/src/Foundry/Core/Agent/: Graded.hs
haskell/foundry-core/src/Foundry/Core/Brand/: AudioVoice.hs  Complete.hs  Provenance.hs  SonicIdentity.hs  Source.hs  VideoExtraction.hs
haskell/foundry-core/src/Foundry/Core/Component/: Registry.hs
haskell/foundry-core/src/Foundry/Core/Effects/: Do.hs  Grade.hs  Graded.hs
haskell/foundry-core/src/Foundry/Core/Scrape/: Job.hs  Protocol.hs  Worker.hs
haskell/foundry-core/test/: Main.hs
haskell/foundry-core/test/Test/Foundry/Core/Agent/: Graded.hs
haskell/foundry-core/test/Test/Foundry/Core/Effects/: Graded.hs
haskell/foundry-extract/: foundry-extract.cabal
haskell/foundry-extract/app/: Demo.hs
haskell/foundry-extract/src/Foundry/Extract/: Component.hs  Compose.hs  Hydrogen.hs
lean/: Foundry.lean  lake-manifest.json  lakefile.lean
proofs/: Hydrogen.lean
runtime/: Cargo.toml  RUST_CONVENTIONS.md
runtime/.cargo/: config.toml
runtime/pkg/: hydrogen_runtime.d.ts  hydrogen_runtime.js  hydrogen_runtime_bg.wasm  hydrogen_runtime_bg.wasm.d.ts  index.html
runtime/src/: animation.rs  aria_hider.rs  auth.rs  binary.rs  capture.rs  commands.rs  crypto.rs  debounce.rs  dom.rs  events.rs  focus_trap.rs  geo.rs  intersection.rs  intl.rs  keyboard.rs  lib.rs  mediaquery.rs  meta.rs  renderer.rs  renderer_wgpu_backup.rs  router.rs  shaders.rs  sse.rs  storage.rs  tessellate.rs  webgpu.rs  webgpu_header.md  websocket.rs
runtime/src/chart/: common.rs  line.rs  mod.rs  pie.rs
runtime/src/core/: chart.rs  easing.rs  input.rs  mod.rs  spring.rs
runtime/src/gesture/: common.rs  mod.rs  motion.rs  physical.rs  sequence.rs  shape.rs  timing.rs  touch.rs  trust.rs  two_finger.rs  vr.rs
runtime/src/worldmodel/: coercion.rs  consent.rs  exit.rs  grounding.rs  mod.rs  types.rs
scripts/: convention.sh
showcase/: runtime-demo.html  runtime-demo.js
src/: Hydrogen.purs
straylight-playground/: STATUS.md  index.html  spago.yaml
test/: ColorConversion.purs  ColorEdgeCases.purs  Element.purs  Main.purs  Property.purs  QRCode.purs  Scene3D.purs  Widget.purs
training/: .gitignore  README.md  dataset_info.json  flake.nix  pyproject.toml
training/configs/: deepseek_coder_lora.yaml  deepseek_coder_qlora.yaml
training/data/: ecommerce_brand_v1.jsonl  ecommerce_brand_v2.jsonl  hydrogen_schema_augmented.jsonl  motion_graphics_v1.jsonl
(+6048 files in other folders)
