[package]
name = "hydrogen-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Straylight Software"]
description = "WebGPU runtime for Hydrogen - consumes binary command buffers"
license = "MIT"
repository = "https://github.com/straylight-software/hydrogen"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WebGPU
wgpu = { version = "0.19", features = ["webgl", "webgpu"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "GpuCanvasContext",
]}

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# Logging
log = "0.4"
console_log = { version = "1.0", features = ["color"] }

# Byte parsing
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in release builds
opt-level = "s"
lto = true
