[package]
name = "hydrogen-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Straylight Software"]
description = "WebGPU runtime for Hydrogen - pure Rust, zero JavaScript"
license = "MIT"
repository = "https://github.com/straylight-software/hydrogen"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.91"

# Error handling
console_error_panic_hook = { version = "0.1", optional = true }

# Logging
log = "0.4"
console_log = { version = "1.0", features = ["color"] }

# Byte parsing
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
gloo-timers = "0.3"

# Serialization (for chart callback data)
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# ═══════════════════════════════════════════════════════════════════════════════
# INTERNATIONALIZATION (pure Rust, zero JS)
# ICU4X: International Components for Unicode by Unicode Consortium + Mozilla
# ═══════════════════════════════════════════════════════════════════════════════
icu = { version = "2.1", features = ["compiled_data"] }
icu_decimal = { version = "2.1", features = ["compiled_data"] }
icu_datetime = { version = "2.1", features = ["compiled_data"] }
icu_locale = "2.1"
fixed_decimal = "0.7"
writeable = "0.6"

# ═══════════════════════════════════════════════════════════════════════════════
# CRYPTOGRAPHY (for auth layer)
# All pure-Rust, WASM-compatible, side-channel resistant
# ═══════════════════════════════════════════════════════════════════════════════
# BLAKE3 - fast hashing, KDF, MAC (matches hs-blake3 on backend)
blake3 = "1.5"

# Ed25519 signatures - request provenance, attestation signing
# NOTE: No rand_core feature - runtime VERIFIES signatures, does not generate keys
# Key generation happens on entity side (Haskell backend or entity's own system)
ed25519-dalek = "2.1"

# X25519 key exchange - encrypted channels (future)
# x25519-dalek = "2.0"

# NO getrandom, NO rand_core in WASM runtime
# Entropy belongs to the ENTITY, not the experience runtime
# The runtime is a VERIFIER, not a GENERATOR

[dependencies.web-sys]
version = "0.3.91"
features = [
    # ═══════════════════════════════════════════════════════════════════════════
    # CORE DOM
    # ═══════════════════════════════════════════════════════════════════════════
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Node",
    "NodeList",
    "DomRect",
    "DomTokenList",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # EVENTS
    # ═══════════════════════════════════════════════════════════════════════════
    "Event",
    "EventTarget",
    "EventListener",
    "AddEventListenerOptions",
    
    # Mouse events
    "MouseEvent",
    "WheelEvent",
    
    # Keyboard events
    "KeyboardEvent",
    
    # Touch events
    "TouchEvent",
    "Touch",
    "TouchList",
    
    # Pointer events (unified input)
    "PointerEvent",
    
    # Focus events
    "FocusEvent",
    
    # Custom events
    "CustomEvent",
    "CustomEventInit",
    
    # Mutation observer
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    
    # Intersection observer
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    
    # Performance observer (Web Vitals)
    "PerformanceObserver",
    "PerformanceEntry",
    "PerformanceObserverEntryList",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # WEBGPU (raw API - replaces Device.js)
    # NOTE: Feature names use snake_case, not PascalCase
    # ═══════════════════════════════════════════════════════════════════════════
    "Gpu",
    "GpuAdapter",
    "GpuAdapterInfo",
    "GpuRequestAdapterOptions",
    "GpuPowerPreference",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuQueue",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuCanvasAlphaMode",
    "GpuTexture",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureDescriptor",
    "GpuTextureFormat",
    "GpuTextureDimension",
    "GpuBuffer",
    "GpuBufferDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCommandBuffer",
    "GpuRenderPassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuComputePassEncoder",
    "GpuComputePassDescriptor",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuSupportedLimits",
    "GpuSupportedFeatures",
    "GpuIndexFormat",
    "GpuVertexFormat",
    "GpuVertexBufferLayout",
    "GpuVertexState",
    "GpuFragmentState",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuMultisampleState",
    "GpuDepthStencilState",
    "GpuColorTargetState",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuTexelCopyTextureInfo",
    "GpuTexelCopyBufferLayout",
    "GpuExtent3dDict",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # STORAGE
    # ═══════════════════════════════════════════════════════════════════════════
    "Storage",
    "StorageEvent",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # NETWORK
    # ═══════════════════════════════════════════════════════════════════════════
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "EventSource",
    "EventSourceInit",
    
    # Fetch API
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # WORKERS
    # ═══════════════════════════════════════════════════════════════════════════
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "ServiceWorker",
    "ServiceWorkerState",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # MEDIA QUERIES
    # ═══════════════════════════════════════════════════════════════════════════
    "MediaQueryList",
    "MediaQueryListEvent",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # HISTORY / ROUTING
    # ═══════════════════════════════════════════════════════════════════════════
    "History",
    "Location",
    "PopStateEvent",
    "Url",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # MISC
    # ═══════════════════════════════════════════════════════════════════════════
    "Navigator",
    "Performance",
    "console",
    
    # Clipboard
    "ClipboardEvent",
    
    # Selection
    "Selection",
    "Range",
    
    # Drag and drop
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # ADDITIONAL DOM (router, dom module requirements)
    # ═══════════════════════════════════════════════════════════════════════════
    "HtmlAnchorElement",
    "Text",
    "ErrorEvent",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "HtmlHeadElement",
    "HtmlMetaElement",
    "HtmlLinkElement",
    "HtmlTitleElement",
    "HtmlScriptElement",
    "HtmlStyleElement",
    "HtmlCollection",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # SVG (chart module requirements)
    # ═══════════════════════════════════════════════════════════════════════════
    "SvgElement",
    "SvgsvgElement",
    "SvgPathElement",
    "SvgGraphicsElement",
    "SvgAnimatedRect",
    "SvgRect",
    "SvgPoint",
    
    # ═══════════════════════════════════════════════════════════════════════════
    # GEOLOCATION (geo module requirements)
    # ═══════════════════════════════════════════════════════════════════════════
    "Geolocation",
    "GeolocationCoordinates",
    "GeolocationPosition",
    "GeolocationPositionError",
    "PositionOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
