[project]
name = "hydrogen-engram-training"
version = "0.1.0"
description = "Training infrastructure for Hydrogen Engram model"
requires-python = ">=3.11,<3.13"

dependencies = [
    "torch>=2.10.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.8.0",
    "tensorboard>=2.16.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "safetensors>=0.4.0",
    "scipy>=1.12.0",
    "llamafactory>=0.9.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16.0"]
flash-attn = ["flash-attn>=2.5.0"]

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Use PyTorch index for CUDA-enabled torch (cu130 for Blackwell/sm_120 support)
extra-index-url = ["https://download.pytorch.org/whl/cu130"]
python-downloads = "automatic"
