cabal-version:          2.4
name:                   effect-monad
version:                0.9.0.0
synopsis:               Embeds effect systems and program logics into Haskell using graded monads and parameterised monads
description:
   Provides the graded monad structure to Haskell via Control.Effect
   with a number of analogs of familiar monads and some new things:
        Reader, Writer, State, Maybe, Counter, Update

   and a wrapper over normal monads (Control.Effect.Monad). This provides a way
   to embed effect systems into Haskell. For more information see the paper
   \"Embedding effect systems in Haskell\" by Orchard and Petricek
   <http://dorchard.co.uk/publ/haskell14-effects.pdf> (Haskell, 2014)

   Also provides the parameterised monad structure due to Atkey in
   Control.Effect.Parameterised along with some instances:
       AtomicState, SafeFiles, ExtensibleState

   New in 0.9: QualifiedDo support via Control.Effect.Do and
   Control.Coeffect.Do — no more RebindableSyntax required.

   and the examples in <https://github.com/dorchard/effect-monad/tree/master/examples>.

  (note, this package was previously called 'ixmonad' until September 2014).

license:                BSD-3-Clause
license-file:           LICENSE
category:               Control, Monads
copyright:              2013-18 University of Kent
author:                 Dominic Orchard
maintainer:             Dominic Orchard
stability:              experimental
build-type:             Simple
tested-with:            GHC == 9.12.2

extra-source-files:     examples/*.hs


source-repository head
  type: git
  location: https://github.com/dorchard/effect-monad

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  -- Core graded monad modules only (minimal, no type-level-sets dependency)
  -- This is the Orchard & Petricek Effect typeclass we need for FoundryM
  exposed-modules:      Control.Effect
                        Control.Effect.Cond
                        Control.Effect.Counter
                        Control.Effect.CounterNat
                        Control.Effect.Do
                        Control.Effect.Maybe
                        Control.Effect.Monad
                        Control.Effect.Update
                        Control.Effect.Vector
                        Control.Effect.Helpers.List
                        -- Parameterised monads (Atkey-style)
                        Control.Effect.Parameterised
                        Control.Effect.ParameterisedAsGraded
                        Control.Effect.Parameterised.State
                        -- DISABLED (require type-level-sets / Data.Type.Map):
                        -- Control.Coeffect
                        -- Control.Coeffect.Coreader  
                        -- Control.Coeffect.Do
                        -- Control.Effect.State
                        -- Control.Effect.Reader        -- uses Data.Type.Map
                        -- Control.Effect.ReadOnceReader -- uses split from type-level-sets
                        -- Control.Effect.Writer         -- uses Data.Type.Map
                        -- Control.Effect.WriteOnceWriter
                        -- Control.Effect.Parameterised.AtomicState
                        -- Control.Effect.Parameterised.ExtensibleState
                        -- Control.Effect.Parameterised.SafeFiles

  build-depends:        base >= 4.18 && < 5
  ghc-options:          -Wall
                        -Wno-orphans
                        -Wno-unused-imports
                        -Wno-name-shadowing
