cabal-version:   3.4
name:            foundry-core
version:         0.1.0.0
synopsis:        METXT Core - Graded monads and brand types for the ingestion engine
description:
  Core types and graded monad infrastructure for the SMART Brand Ingestion Engine.
  .
  Provides:
  .
  * Graded monad 'Agent' with permission, budget, and context tracking
  * Brand schema types (Identity, Palette, Typography, etc.)
  * Co-effect algebra for environment requirements
  * Linear resource accounting

license:         BSD-3-Clause
license-file:    LICENSE
author:          Straylight Software
maintainer:      dev@straylight.ai
copyright:       2026 Straylight Software
category:        Data
build-type:      Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

common extensions
  default-extensions:
    StrictData
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    TypeApplications
    TypeFamilies
    UndecidableInstances
    DataKinds
    GADTs
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses

library
  import:           warnings, extensions
  exposed-modules:
    Foundry.Core
    Foundry.Core.Text
    Foundry.Core.Brand
    Foundry.Core.Brand.Color
    Foundry.Core.Brand.Customer
    Foundry.Core.Brand.Identity
    Foundry.Core.Brand.Overview
    Foundry.Core.Brand.Palette
    Foundry.Core.Brand.Typography
    Foundry.Core.Brand.Spacing
    Foundry.Core.Brand.Voice
    Foundry.Core.Brand.AudioVoice
    Foundry.Core.Brand.SonicIdentity
    Foundry.Core.Brand.VideoExtraction
    Foundry.Core.Brand.Strategy
    Foundry.Core.Brand.Tagline
    Foundry.Core.Brand.Editorial
    Foundry.Core.Brand.Provenance
    Foundry.Core.Brand.Source
    Foundry.Core.Brand.Completion
    Foundry.Core.Brand.Logo
    Foundry.Core.Brand.Logo.Sizing
    Foundry.Core.Brand.Logo.Usage
    Foundry.Core.Brand.Gradient
    Foundry.Core.Brand.Layout
    Foundry.Core.Brand.Theme
    Foundry.Core.Brand.Imagery
    Foundry.Core.Brand.Material
    Foundry.Core.Brand.UIElements
    Foundry.Core.Brand.UIElements.Buttons
    Foundry.Core.Brand.UIElements.Accessibility
    Foundry.Core.Brand.GraphicElements
    Foundry.Core.Brand.Complete
    Foundry.Core.Brand.Ontology
    Foundry.Core.Brand.Hierarchy
    Foundry.Core.Brand.AgentContext
    Foundry.Core.Agent
    Foundry.Core.Agent.Allocation
    Foundry.Core.Agent.Budget
    Foundry.Core.Agent.Context
    Foundry.Core.Agent.Graded
    Foundry.Core.Agent.ILP
    Foundry.Core.Agent.Permission
    Foundry.Core.Agent.Solver
    Foundry.Core.Agent.Task
    Foundry.Core.Effect
    Foundry.Core.Effect.Graded
    Foundry.Core.Effect.CoEffect
    -- GPU: Binary command format for billion-agent rendering
    Foundry.Core.GPU
    Foundry.Core.GPU.Command
    Foundry.Core.GPU.Identified
    Foundry.Core.GPU.Patch
    Foundry.Core.GPU.Renderer
    -- Evring: Event-driven ring buffer state machines (from straylight/evring)
    -- Core modules (no io_uring dependency)
    Foundry.Core.Evring.Event
    Foundry.Core.Evring.Handle
    Foundry.Core.Evring.Machine
    Foundry.Core.Evring.Ring
    Foundry.Core.Evring.Sigil
    Foundry.Core.Evring.Trace
    Foundry.Core.Evring.Zmtp
    -- Scrape: Trusted browser-based brand extraction
    Foundry.Core.Scrape.Job
    Foundry.Core.Scrape.Worker
    Foundry.Core.Scrape.Protocol
    -- NOTE: Wai modules require io_uring (Linux kernel >= 5.1)
    -- Enable when io-uring package is available:
    -- Foundry.Core.Evring.Wai
    -- Foundry.Core.Evring.Wai.Conn
    -- Foundry.Core.Evring.Wai.Loop
    -- Foundry.Core.Evring.Wai.MultiCore
    -- Foundry.Core.Evring.Wai.MultiCoreRR
    -- Foundry.Core.Evring.Wai.Pool
    -- Foundry.Core.Evring.Wai.Server
  build-depends:
    , aeson             >= 2.0   && < 3
    , base              >= 4.18  && < 5
    , bytestring        >= 0.11  && < 1
    , case-insensitive  >= 1.2   && < 2
    , containers        >= 0.6   && < 1
    , crypton           >= 1.0   && < 2
    , crypton-x509      >= 1.7   && < 2
    , hashable          >= 1.4   && < 2
    , memory            >= 0.18  && < 1
    , http-types        >= 0.12  && < 1
    , linear-base       >= 0.4   && < 1
    , mtl               >= 2.3   && < 3
    , network           >= 3.1   && < 4
    , primitive         >= 0.8   && < 1
    , text              >= 2.0   && < 3
    , time              >= 1.12  && < 2
    , transformers      >= 0.6   && < 1
    , unix              >= 2.8   && < 3
    , uuid              >= 1.3   && < 2
    , vault             >= 0.3   && < 1
    , vector            >= 0.13  && < 1
    , wai               >= 3.2   && < 4
  hs-source-dirs:   src
  default-language: GHC2024

test-suite foundry-core-test
  import:           warnings, extensions
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Test.Foundry.Core.Agent
    Test.Foundry.Core.Agent.Allocation
    Test.Foundry.Core.Agent.Graded
    Test.Foundry.Core.Brand
    Test.Foundry.Core.Brand.Generators
    Test.Foundry.Core.Brand.Tagline
    Test.Foundry.Core.Brand.Editorial
    Test.Foundry.Core.Brand.Strategy
    Test.Foundry.Core.Brand.Security
    Test.Foundry.Core.Brand.UIElements
    Test.Foundry.Core.Brand.GraphicElements
    Test.Foundry.Core.Effect
    Foundry.Core.Evring.TestSigil
  build-depends:
    , base            >= 4.18  && < 5
    , bytestring      >= 0.11  && < 1
    , containers      >= 0.6   && < 1
    , hedgehog          >= 1.4   && < 2
    , foundry-core
    , QuickCheck        >= 2.14  && < 3
    , tasty             >= 1.5   && < 2
    , tasty-hedgehog    >= 1.4   && < 2
    , tasty-quickcheck  >= 0.10  && < 1
    , text              >= 2.0   && < 3
    , vector            >= 0.13  && < 1
  hs-source-dirs:   test
  default-language: GHC2024
